# chartOCR

./: keep_alive.py  main.py  pyproject.toml  replit.nix  requirements.txt  setup.sh
templates/: index.html
